--- a/blocks/edit-profile/__save-button/edit-profile__save-button.css
+++ b/blocks/edit-profile/__save-button/edit-profile__save-button.css
@@ -4,7 +4,7 @@
   border: none;
   background-color: black;
   color: white;
-  margin: 48px auto 36.5px;
+  margin: 48px 36px 36.5px;
   padding: 0;
   border-radius: 2px;
   transition: opacity 0.2s ease-in-out 0s;
