--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../fonts/fonts.css);
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
@@ -20,6 +21,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyrights/footer__copyrights.css);
 @import url(../blocks/edit-profile/edit-profile.css);
+@import url(../blocks/edit-profile/__container/edit-profile__container.css);
 @import url(../blocks/edit-profile/__form/edit-profile__form.css);
 @import url(../blocks/edit-profile/__close-button/edit-profile__close-button.css);
 @import url(../blocks/edit-profile/__title/edit-profile__title.css);
@@ -28,3 +30,4 @@
 @import url(../blocks/edit-profile/__input/_name/edit-profile__input_name.css);
 @import url(../blocks/edit-profile/__input/_about/edit-profile__input_about.css);
 @import url(../blocks/edit-profile/__opened/edit-profile__opened.css);
+
