--- a/blocks/edit-profile/__input/edit-profile__input.css
+++ b/blocks/edit-profile/__input/edit-profile__input.css
@@ -12,6 +12,7 @@
   overflow: hidden;
   padding-bottom: 13.26px;
   margin: 54px 36px 0;
+  outline: none;
 }
 
 .edit-profile__input:last-of-type {
