--- a/blocks/edit-profile/__input/edit-profile__input.css
+++ b/blocks/edit-profile/__input/edit-profile__input.css
@@ -1,6 +1,7 @@
 .edit-profile__input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
   width: 358px;
   min-height: 14px;
   font-weight: normal;
