--- a/pages/index.css
+++ b/pages/index.css
@@ -20,14 +20,14 @@
 @import url(../blocks/elements/__heart-button/elements__heart-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyrights/footer__copyrights.css);
-@import url(../blocks/edit-profile/edit-profile.css);
-@import url(../blocks/edit-profile/__container/edit-profile__container.css);
-@import url(../blocks/edit-profile/__form/edit-profile__form.css);
-@import url(../blocks/edit-profile/__close-button/edit-profile__close-button.css);
-@import url(../blocks/edit-profile/__title/edit-profile__title.css);
-@import url(../blocks/edit-profile/__input/edit-profile__input.css);
-@import url(../blocks/edit-profile/__save-button/edit-profile__save-button.css);
-@import url(../blocks/edit-profile/__input/_name/edit-profile__input_name.css);
-@import url(../blocks/edit-profile/__input/_about/edit-profile__input_about.css);
-@import url(../blocks/edit-profile/__opened/edit-profile__opened.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_name.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_about.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 
