--- a/blocks/elements/__heart-button/elements__heart-button.css
+++ b/blocks/elements/__heart-button/elements__heart-button.css
@@ -1,5 +1,5 @@
 .elements__heart-button {
-  background-image: url(../../../images/heart.png);
+  background-image: url(../../../images/heart.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
@@ -7,6 +7,7 @@
   height: 19px;
   border: transparent;
   transition: opacity 0.2s ease-in-out 0s;
+  cursor: pointer;
 }
 
 .elements__heart-button:hover {
@@ -14,5 +15,5 @@
 }
 
 .elements__heart-button:active {
-  background-image: url(../../../images/Union.png);
+  background-image: url(../../../images/blackheart.svg);
 }
