--- a/blocks/footer/__copyrights/footer__copyrights.css
+++ b/blocks/footer/__copyrights/footer__copyrights.css
@@ -6,3 +6,10 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width:768px) {
+  .footer__copyrights {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
