--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
-.edit-profile__close-button {
-  background-image: url(../../../images/CloseIcon.png);
+.popup__close-button {
+  background-image: url(../../../images/closeicon.svg);
   height: 40px;
   width: 40px;
   border: none;
@@ -13,14 +13,15 @@
   right: -40px;
   position: absolute;
   transition: opacity 0.2s ease-in-out 0s;
+  cursor: pointer;
 }
 
-.edit-profile__close-button:hover {
+.popup__close-button:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width:768px) {
-  .edit-profile__close-button {
+  .popup__close-button {
     width: 26px;
     height: 26px;
     margin-bottom: 13.62px;
