--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.edit-profile__save-button {
+.popup__save-button {
   width: 358px;
   height: 50px;
   border: none;
@@ -8,16 +8,22 @@
   padding: 0;
   border-radius: 2px;
   transition: opacity 0.2s ease-in-out 0s;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  cursor: pointer;
 }
 
-.edit-profile__save-button:hover {
+.popup__save-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width:768px) {
-  .edit-profile__save-button {
+  .popup__save-button {
     width: 238px;
     height: 46px;
-    margin: 46px auto 25px;
+    margin: 46px 22px 25px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
