--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.edit-profile__title {
+.popup__title {
   color: black;
   font-weight: 900;
   font-size: 24px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width:768px) {
-  .edit-profile__title {
+  .popup__title {
     font-size: 18px;
     line-height: 22px;
     margin: 25px auto 0 22px;
