--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,16 +1,17 @@
 .profile__add-button {
-background-image: url(../../../images/add.png);
-background-color: transparent;
-background-position: center;
-background-repeat: no-repeat;
-box-sizing: border-box;
-border-radius: 2px;
-width: 150px;
-height: 50px;
-border: 2px solid #FFFFFF;
-align-self: center;
-margin: 0 0 0 auto;
-transition: opacity 0.2s ease-in-out 0s;
+  background-image: url(../../../images/add.svg);
+  background-color: transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  border-radius: 2px;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  align-self: center;
+  margin: 0 0 0 auto;
+  transition: opacity 0.2s ease-in-out 0s;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
