--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,10 +4,15 @@
   line-height: 48px;
   margin: 0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 373px;
 }
 @media screen and (max-width:768px) {
   .profile__name {
    font-size: 22px;
    line-height: 27px;
+   max-width: 196px;
   }
 }
