delete button problem

--- a/blocks/card/__heart-button/card__heart-button.css
+++ b/blocks/card/__heart-button/card__heart-button.css
@@ -1,19 +1,17 @@
-.elements__heart-button {
+.card__heart-button {
   background-image: url(../../../images/heart.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
+  background-size: contain;
+  border: none;
   width: 21px;
   height: 19px;
-  border: transparent;
   transition: opacity 0.2s ease-in-out 0s;
-  cursor: pointer;
+  padding: 0;
+  margin: 30px 18px 30px auto;
 }
 
-.elements__heart-button:hover {
+.card__heart-button:hover {
   opacity: 0.5;
-}
-
-.elements__heart-button:active {
-  background-image: url(../../../images/blackheart.svg);
 }
