--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,6 @@
   visibility: hidden;
   align-content: center;
   justify-content: center;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s ease-in-out;
 }
