--- a/blocks/card/__description/card__description.css
+++ b/blocks/card/__description/card__description.css
@@ -1,10 +1,11 @@
-.elements__description {
+.card__description {
   color: black;
+  min-height: 23px;
+  width: 246px;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin: 0;
-  padding: 0;
+  margin: 25px 0 31px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
