--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
-  margin: 67px auto 60px 200px;
+  width: 880px;
+  margin: 68px auto 60px;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:879px) {
   .footer {
-    margin: 50px 19px 36px;
+    margin: 50px  auto 36px 19px;
+    width: 282px;
   }
 }
