--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
@@ -13,11 +14,6 @@
 @import url(../blocks/profile/__user/profile__user.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__card/elements__card.css);
-@import url(../blocks/elements/__photo/elements__photo.css);
-@import url(../blocks/elements/__info/elements__info.css);
-@import url(../blocks/elements/__description/elements__description.css);
-@import url(../blocks/elements/__heart-button/elements__heart-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyrights/footer__copyrights.css);
 @import url(../blocks/popup/popup.css);
@@ -29,5 +25,15 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_name.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_about.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_title.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_img.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__photo/card__photo.css);
+@import url(../blocks/card/__info/card__info.css);
+@import url(../blocks/card/__description/card__description.css);
+@import url(../blocks/card/__heart-button/card__heart-button.css);
+@import url(../blocks/card/__heart-button/_active/card__heart-button_active.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__figcaption/popup__figcaption.css);
