--- a/blocks/popup/__img/popup__img.css
+++ b/blocks/popup/__img/popup__img.css
@@ -1,4 +1,7 @@
 .popup__img {
-  max-width: 75vw;
-  max-height: 75vh;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
