--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,14 @@
 .popup {
+  display: flex;
   position: fixed;
   width: 100%;
   height: 100%;
-  left: 0;
   top: 0;
-  background-color: rgba(0,0,0,0.5);
-  visibility: hidden;
+  left: 0;
   align-content: center;
   justify-content: center;
+  visibility: hidden;
+  background-color: rgba(0,0,0,0.5);
   opacity: 0;
-  transition: visibility 0s, opacity 0.3s ease-in-out;
+  transition: visibility 0s, opacity 0.3s ease-in;
 }
