--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
-@import url(../blocks/button/button.css);
+@import url(../blocks/cursor-pointer/cursor-pointer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
@@ -37,3 +37,4 @@
 @import url(../blocks/card/__delete-button/card__delete-button.css);
 @import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/popup/__figcaption/popup__figcaption.css);
+@import url(../blocks/popup/__container/_photo/popup__container_photo.css);
