--- a/blocks/popup/__figcaption/popup__figcaption.css
+++ b/blocks/popup/__figcaption/popup__figcaption.css
@@ -3,7 +3,5 @@
   font-size: 12px;
   line-height: 15px;
   color: white;
-  position: absolute;
-  align-self: flex-end;
-  bottom: -22px;
+  margin-top: 10px;
 }
