--- a/blocks/popup/__img/popup__img.css
+++ b/blocks/popup/__img/popup__img.css
@@ -1,7 +1,8 @@
 .popup__img {
-  width: 100%;
-  height: 100%;
-  background-size: contain;
+  max-height: 75vh;
+  max-width: 75vw;
+  /*background-size: contain;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;*/
+  position: relative;
 }
